# ChangeLog for dev-libs/libburn
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libburn/ChangeLog,v 1.170 2014/03/08 13:11:58 maekke Exp $

  08 Mar 2014; Markus Meier <maekke@gentoo.org> libburn-1.3.4.ebuild:
  arm stable, bug #502718

*libburn-1.3.6 (07 Mar 2014)

  07 Mar 2014; Daniel Pielmeier <billie@gentoo.org> +libburn-1.3.6.ebuild:
  Version bump.

  05 Mar 2014; Jeroen Roovers <jer@gentoo.org> libburn-1.3.4.ebuild:
  Stable for HPPA (bug #502718).

  24 Jan 2014; Daniel Pielmeier <billie@gentoo.org> -libburn-1.3.0_p01.ebuild:
  Remove old.

  18 Jan 2014; Agostino Sarubbo <ago@gentoo.org> libburn-1.3.2.ebuild:
  Stable for alpha, wrt bug #486322

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> libburn-1.3.2.ebuild:
  Stable for ia64, wrt bug #486322

*libburn-1.3.4 (11 Jan 2014)

  11 Jan 2014; Daniel Pielmeier <billie@gentoo.org> +libburn-1.3.4.ebuild:
  Version bump.

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.3.2.ebuild:
  Stable for sparc, wrt bug #486322

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.3.2.ebuild:
  Stable for ppc, wrt bug #486322

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.3.2.ebuild:
  Stable for ppc64, wrt bug #486322

  20 Oct 2013; Markus Meier <maekke@gentoo.org> libburn-1.3.2.ebuild:
  arm stable, bug #486322

  09 Oct 2013; Jeroen Roovers <jer@gentoo.org> libburn-1.3.2.ebuild:
  Stable for HPPA (bug #486322).

  30 Sep 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.3.2.ebuild:
  Stable for x86, wrt bug #486322

  28 Sep 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.3.2.ebuild:
  Stable for amd64, wrt bug #486322

*libburn-1.3.2 (06 Sep 2013)

  06 Sep 2013; Daniel Pielmeier <billie@gentoo.org> +libburn-1.3.2.ebuild:
  Version bump.

  05 Jul 2013; Daniel Pielmeier <billie@gentoo.org> -libburn-1.2.8.ebuild:
  Remove old.

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.3.0_p01.ebuild: