@@ -5,14 +5,14 @@ DIST libburn-1.3.2.tar.gz 949125 SHA256 c34d1fbde8b5d946e4f47ab29caae2ceb47ba232
 DIST libburn-1.3.4.tar.gz 953939 SHA256 60244606ebf7d150a5498863e7b8fc695d80b39a4404741e8d601af3312da919 SHA512 070ef744831156db2c603395205ce51bc5db3517a88ec4485caea1c4165a3393d8cc019e06aa323e2cdd8624d2fbc874d30fda39e558a53fe4d35c05d98e0a62 WHIRLPOOL ea75fa703c0698f26752469a1836872a728855ebfbdb8d7a416e9f26aea719d81f165a7c719e91b8229f1a26521656c9b336021a352e29fbce5e0e60049dd18b
 DIST libburn-1.3.6.tar.gz 964875 SHA256 cdbe9ba1d0bd3ad80864eb1b8c1d7c368321fa52d65b92cdf15241586fb72350 SHA512 f09a13c3e66b3d6ce2340a42d401406e3c5e5d6d8b2ed114ed9bd5dbc63c28cf5c9149a4e95cd27a22e22cbcbb75ef274a75e6b45da1382b2de2411e04b63714 WHIRLPOOL e57cc4cbdcaf31ef78ffcd200b54856a6e2304a975cbf55ef344f661423219c558ff78ce256956b490b2edd9bd56369671bbb7d3589915c63d5c775147b2ca57
 EBUILD libburn-1.3.2.ebuild 1107 SHA256 4cc418335e7b6b2355fcb035f1e1a0438fb4d7919ca15851ef16dea491f09ccf SHA512 8ab490851395b0ca856992b6e09cc9512cc2c2ed7a51ee14783994a085e8d891e8647d09f5fb421ce97ab36e302410bb4b3f96209b8966f247685b132d184b79 WHIRLPOOL 34fdd7be13cea75e108400c4bc8d5a483a0d94f92ee400ad54023716852d1134fdf2823e30408e3e50e81c4ea16ae03abcdf643534247c8a801955c6f4a1e149
-EBUILD libburn-1.3.4.ebuild 1116 SHA256 6f40805be8f2972b8c9568ca91ded29f0aeaeb972e2c671c7be32f302164f5be SHA512 94b59b8d6d4ffbd92dc5a41ed0d1c21730c1944ca8b5e19bdbab0a922a10f6b5d146cd1c56fbd67b471446f9239cf4831504d173b374da90b5a95450e4b957ea WHIRLPOOL e81506d5a0ef0d58982d674ed2e8779abb8f0b435e2e9523a701959eaed8852451cba112ce16bdfe92a53323ab7076c54af4226e8804486aef003d63955deb72
+EBUILD libburn-1.3.4.ebuild 1114 SHA256 d7c02171f2a41aa9b97ef4cf8131b7508bb1785431e1ef671208703c2d75fcea SHA512 ee5ef4a7a407406cbb5da21d95cb4489c07d008d48223cfa3401e6229ae857c38db34c5cdf96317e6bf30060cdb8e2b861b75aa735fc2d95af4ef20d950e9b8a WHIRLPOOL afcc5212815ff615e8494d05a5682eda2d932534c5b0e68312535a19360eb17504181b1d5d0b076fa4b19332327cd82a402139f0fa160cb0358cfdafc581ea50
 EBUILD libburn-1.3.6.ebuild 1118 SHA256 ff481cbacaca147354dc23614f428643ca5e07ee00d7963f603e7880b6dcb36d SHA512 0c90f244e3362085338a325c7d3d0e7a303f13b3e9baee345f1b52112c510b3a22bb4c631b61767a93d47628b1667f1ab117f913715f5a8a39c2a9fece2ff941 WHIRLPOOL c38f03c2be5d5dc5ac5c99876c954721879d2cc5426c8a5242f16e720cf3f1fe4e61b92d7c5b1503a2a3d9175469dfb0cb72e76226322bb0495f4e8840f18d44
-MISC ChangeLog 20605 SHA256 1e7abd493af7ddcee4745bbfecfd085d2fb322d0a0e72a771cc8e20876f79630 SHA512 cde4c365a6ab91cc9d45d41ef246505f844f540ada0bc728a3a7e724848a5385662d6a8a4a8e873c5ef312141c668c1a0f2cdf0ef19db06c45177acc24755a42 WHIRLPOOL 415f39ef88f8dfcf5f76d88c72bdd760e6aaaa7af59c205e6bc46b1f54f79c504c467affd0725ded895d1b03efed00b45425e0a85416b1855da1247d47294e7b
+MISC ChangeLog 20700 SHA256 9fa3695d44441c15172093dc1b4c100fcc2155d8c554216c58465134ce7fce8a SHA512 b48c86afd34d3b9c23257126611361f80cde44102fb3cd83f4f919049a747b4d92c6a4dc0a4ae227e2f4a76b8f0751116dd85dfeefbb4a5552b170a1798333dc WHIRLPOOL c90023ee696284e3754fec870e606c4e08af9ec1c5423b9ce62d634de91f047a746581eec85c7fd030d9acaa6b91d28d07491f8b32a8905a58822b3099947aa4
 MISC metadata.xml 629 SHA256 502fdd223728e37befae660191953ce8ed417fd0e35a4955147756db47c7e900 SHA512 1f7916bf3c93706caf11cbf9b2e34625f012d64f44defbc7b563926bc599c20b501b4f6e6d9c4660022c31f87a4d26da50fa09764b628edc3f613971de824c8f WHIRLPOOL 6436e94c1271d6d18e97108df60e45d7f1cf9a9dfe6d9d1fa07c052125d2107e886bcf4202570b9220c9fe09dda45d554b20f2cb9c2b0b19271b192a27cecac4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMbGOUACgkQkKaRLQcq0GI/MwCgkb7BbvQcF3h9ub31F7rxEYaj
-AeAAoKSaS2w384CElPExTGBnh1XTCgA/
-=7mPn
+iEYEAREIAAYFAlMbb38ACgkQCaWpQKGI+9T70ACfetwxIyaiqsA0K/4sPW/l7QnJ
+NZIAnAi6uJHVoVqRrzlK39Hc9zesKxuc
+=j8Bs
 -----END PGP SIGNATURE-----
