@@ -5,14 +5,14 @@ DIST libisofs-1.3.2.tar.gz 769709 SHA256 ecc321e3541e4809beccff32db6fda10cdd4479
 DIST libisofs-1.3.4.tar.gz 770418 SHA256 fd1b23cc855b2c62384106dffa5ae9e779ed9bce1702b9687b2b64bb623c19f4 SHA512 44df0017e29ebc31a0c84eedf107ead2bb287a51a7986a0ccee4bbbbc8ac87d8609905d3a3fe2a5956392cb4dc527ab931900d422434530ed67c8b467d5f30be WHIRLPOOL 58982f89e9d3cc6c16a3e8aba17aa408e3b02cff7c6eda6a399620383f152b4b6969ccc93100facfbdfb11119bbb82d1838882e8457c02df6463e5142eab9015
 DIST libisofs-1.3.6.tar.gz 780651 SHA256 9ffff0fa1827ac3c246783306fe98035ff8e4e251b5191984611a351f358350c SHA512 2e95f2da7ca9bb960f6dfbdf077717e306e95195aa0e71a4b3b633105da213cb58fb996478afb69c3c0ed09a316cfe4062227a40c1c41a9a828e01b4395c7cb0 WHIRLPOOL 27863beb1e352fee0f862719c8aa73241aff2428b560b8fca98f82e34949550fc91b887a9aa686ac4bab315211e533569df57590e059f8391bf7907632250aa6
 EBUILD libisofs-1.3.2.ebuild 1078 SHA256 c2c2e6390a98f2c851e934c6904bf9bcf316d2db5758eec49b4a95eaad4c364c SHA512 a34b3332cce29795a165d8efb0d05b9d9edce2a90963e199ecab6d8671d35b38a4afda92a256be61271b4cf8ab178c937c5089f8364885f1cd37e7d11a8b2270 WHIRLPOOL 09845a0ba75c0d61965c73712fbc2a8a0026eceefb9876ca8470078c8b3269730e63254e8c601f0ece25b4139aff81a9e8774c9ad87780d0310876c8c8d1b465
-EBUILD libisofs-1.3.4.ebuild 1087 SHA256 2daf9ee903b58ffe85b779f63b78860cbf6ee9fbe1c58af83588b35c67c612b3 SHA512 eed9c00a765f31e7a7e12c7d5a7b0b386a06165459ee5c6b3dd01dbd5ef0db83c06d8ade79371978be1838e23595e2494f29b72c06b58658bc252c0af3f3cdb1 WHIRLPOOL fedc6c52f660b34154656c31039244e36fcfac140c1539d81fb8fe4cd2e06c8822836d2667b33f9e9d377a0f0c21f85405cf3a4036f1b5f6f36e245731a97897
+EBUILD libisofs-1.3.4.ebuild 1085 SHA256 4864352fcbe19c1009d63acbeef624613349f2cdfaeaf854882d35dc14d589d2 SHA512 1c72c8a3accd84046f3fdf8fc5ca728c2cc578c2d3cc53b994655b248ec9c2dcbbd945bb68a23bf03071bdd056987b15f0e83f0108f6eb08ef930309a36dce59 WHIRLPOOL c042722784cd6a22c5ed8124fea3f71df63b72686b2e17e8f5c0190c935d1d64830fa143221249552a9e0b887d5a877e6715b89a607fd5c6f30a0baf07109ff0
 EBUILD libisofs-1.3.6.ebuild 1089 SHA256 018f6fe31a7246c11f7caa5a8c981028bdf209b22c260845e71a6e0caf7d78b2 SHA512 b8c54d8261b59cb42fa12e7d78f80fc409689f3d2ac5e60e738d2ec158b584cf524ab53bfc67dc6b88bf1c953879686ae018f1ec2a664d29c13abda52b06a8bd WHIRLPOOL fa46ca6e264497fa669ac0616e6ff8cb0e2d9ebf20737d8ad250e3aac1ef556ef19de72c0a3d7d09fdb84c5c77333d0796d1550cfe5c27bcb82eea29a27558c6
-MISC ChangeLog 19399 SHA256 d2edb521aff14a4dd877c54c51bbb1f370b2e81c16bed774fd3fae5fb3aca44f SHA512 363e596cb991e70316aaafeab2b7abe3ddd4aa15af151624200592b2ea4123e32711ec945157135303ac7a52ef0e513c407bd85c5d9cd9edf9e4b3101bc5e9a8 WHIRLPOOL 0c6d0f1ac656c4e930fb51f88c1c3b5909165378978ff6a71bd3bf3c4801ed2937d4bbba074c17cfc99667f03b90da2061c9087e7cd1f6860fb27bc010d9a632
+MISC ChangeLog 19495 SHA256 6bb82149f7558f39866378c9988641c789ef0feb420f9438566c07f1a749ff70 SHA512 2bc86a733f565320b739dc3457aa9e984c7f9e079c2d4391c7bace6aac83493b11667ed5873c873beb975426134143b37c9ccc3db119b8deacb55e2551339c72 WHIRLPOOL b5346f2ed8040131339140f5de4e66b5bc3a02ff03586a3be380004e49e4139f6b4374b2b81b06705cd7564d76e4f9611c5c5e7fc42aea2f1300a7f350ce24e3
 MISC metadata.xml 333 SHA256 e4dc4e40be3d5cfb10be7e8f17e58a63b64ebc81749c2d29a41e3ba067a30a48 SHA512 159a70f888b820ef65230d6a354caa3d4aa08cf5af3abb6b8c0c539bbe687e840c749b1c39ef24750373760789701b6e6eaba8eb5d141d4a470a135af846ae6a WHIRLPOOL 0d340264f20c936e354d5a3a89158dfb9fffe3fc159f3fca8c4f8c66d0b2e3d1c3279009ddb5166e0878aecd5ae08f06a04894941f1eee880c8ebf5a4c161866
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMbGPsACgkQkKaRLQcq0GLA3wCgn7vK+TCFmgHbq8dCyhvz1nPU
-+MgAn1vBv7lZFSzIonXujCrEtRVOwFOK
-=wB7R
+iEYEAREIAAYFAlMbb5YACgkQCaWpQKGI+9SKiQCcCdUo8V3N62VcskHRjKFTotGw
+KokAn03vv6RL73pqOwgC5cTmRzRmgn7R
+=pW3K
 -----END PGP SIGNATURE-----
